build: add clean-clone Java 21 multi-stage service images feat(security): standardize JWT rotation revocation and gateway enforcement feat(users): complete profile admin identity and dev seed lifecycle feat(store): harden catalog inventory reservations and store outbox feat(orders): add authoritative quoting idempotent saga and ownership feat(web-ui): add Redis-session Thymeleaf customer BFF feat(admin-ui): add operations console and sanitized readiness test: cover security commerce MVC and runtime regressions docs: document architecture startup acceptance and operations